Fixing bugs in the Convert to Text Blocks hint.